refactor(api): change response format and divide swagger
