# apps/api/src/app/response-types.ts
@@ -1,0 +1,11 @@
+export type ResponseWithMessage = {
+	code: number
+	message: string
+}
+
+export type ResponseWithData<T> = {
+	code: number
+	data: T
+}
+
+export type ResponseWithError = ResponseWithMessage
