# apps/api/src/swagger-spec.yaml
@@ -6,395 +6,99 @@ host: localhost:3333
 basePath: '/api'
 swagger: '2.0'
 paths:
-    /tasklist/{id}/tasks:
-        get:
-            description: Return all tasks related to tasklist
+    /auth/sign-in:
+        post:
+            description: Sign In User
             tags:
-                - TaskList
+                - Auth
             produces:
                 - application/json
             parameters:
-                - $ref: '#/components/parameters/id'
+                - $ref: '#/components/parameters/credentials'
             responses:
                 200:
-                    description: tasklist
-                    schema:
-                        type: array
-                        items:
-                            $ref: '#/components/schemas/ApiTask'
-    /tasklist:
+                    $ref: '#/components/responses/OK'
+                401:
+                    $ref: '#/components/responses/Unauthorized'
+
+    /auth/sign-up:
         post:
-            description: Create tasklist
+            description: Sign Up User
             tags:
-                - TaskList
+                - Auth
             produces:
                 - application/json
             parameters:
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/description'
-            responses:
-                '201':
-                    $ref: '#/components/responses/OK'
-                '400':
-                    $ref: '#/components/responses/BadRequest'
-    /tasklist/{id}/task:
-        post:
-            description: Add exist task to task list
-            tags:
-                - TaskList
-                - Task
-            parameters:
-                - $ref: '#/components/parameters/id'
-                - $ref: '#/components/parameters/bodyId'
+                - $ref: '#/components/parameters/credentials'
             responses:
                 201:
                     $ref: '#/components/responses/OK'
                 400:
                     $ref: '#/components/responses/BadRequest'
 
-    /tasklist/{id}:
-        get:
-            description: Find tasklist by id and return
-            tags:
-                - TaskList
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                '200':
-                    description: tasklist
-                    schema:
-                        type: object
-                        $ref: '#/components/schemas/ApiTaskList'
-        put:
-            description: Update exist tasklist
-            tags:
-                - TaskList
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/description'
-            responses:
-                '204':
-                    $ref: '#/components/responses/OK'
-                '400':
-                    $ref: '#/components/responses/BadRequest'
-        delete:
-            description: Delete exist tasklist
-            tags:
-                - TaskList
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                204:
-                    $ref: '#/components/responses/OK'
-                400:
-                    $ref: '#/components/responses/BadRequest'
-    /project/{id}:
-        get:
-            description: Find project by id
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                200:
-                    description: api project
-                    schema:
-                        type: object
-                        $ref: '#/components/schemas/ApiProject'
-                '404':
-                    $ref: '#/components/responses/NotFound'
-        put:
-            description: Update exist project
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/description'
-            responses:
-                204:
-                    $ref: '#/components/responses/OK'
-                400:
-                    $ref: '#/components/responses/BadRequest'
-        delete:
-            description: Delete exist project
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                204:
-                    $ref: '#/components/responses/OK'
-                400:
-                    $ref: '#/components/responses/BadRequest'
-    /project/{id}/tasklists:
-        get:
-            description: Returns all related tasklists
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                200:
-                    description: api tasklis
-                    schema:
-                        type: array
-                        items:
-                            $ref: '#/components/schemas/ApiTaskList'
-    /project/{id}/tasks:
-        get:
-            description: Returns all related tasks
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                200:
-                    description: api tasklis
-                    schema:
-                        type: array
-                        items:
-                            $ref: '#/components/schemas/ApiTaskWithTaskListId'
-    /project:
-        get:
-            description: Return all projects
-            tags:
-                - Project
-            produces:
-                - application/json
-            responses:
-                200:
-                    description: api project
-                    schema:
-                        type: array
-                        items:
-                            $ref: '#/components/schemas/ApiProject'
-        post:
-            description: Create new project
-            tags:
-                - Project
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/description'
-            responses:
-                '201':
-                    $ref: '#/components/responses/OK'
-                '400':
-                    $ref: '#/components/responses/BadRequest'
-    /task:
-        post:
-            description: Create new task
-            tags:
-                - Task
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/done'
-            responses:
-                '201':
-                    $ref: '#/components/responses/EntityId'
-                '400':
-                    $ref: '#/components/responses/BadRequest'
-
-    /task/{id}:
-        get:
-            description: Find task by id
-            tags:
-                - Task
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                200:
-                    description: api task
-                    schema:
-                        type: object
-                        $ref: '#/components/schemas/ApiTask'
-                '404':
-                    $ref: '#/components/responses/NotFound'
-        put:
-            description: Update exist task
-            tags:
-                - Task
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-                - $ref: '#/components/parameters/title'
-                - $ref: '#/components/parameters/done'
-            responses:
-                204:
-                    $ref: '#/components/responses/OK'
-                400:
-                    $ref: '#/components/responses/BadRequest'
-        delete:
-            description: Delete exist project
-            tags:
-                - Task
-            produces:
-                - application/json
-            parameters:
-                - $ref: '#/components/parameters/id'
-            responses:
-                204:
-                    $ref: '#/components/responses/OK'
-                400:
-                    $ref: '#/components/responses/BadRequest'
-
 components:
     schemas:
-        DefaultRow:
+        ResponseWithError:
             type: object
-            required:
-                - id
-                - created
-                - updated
-                - type
-            properties:
-                id:
-                    type: number
-                created:
-                    type: string
-                updated:
-                    type: string
-                type:
-                    type: string
-
-        ApiProject:
-            allOf:
-                - $ref: '#/components/schemas/DefaultRow'
-                - type: object
-                  properties:
-                      title:
-                          type: string
-                      description:
-                          type: string
-                      tasklists:
-                          type: array
-                          items:
-                              $ref: '#/components/schemas/ApiTaskList'
-
-        ApiTaskList:
-            allOf:
-                - $ref: '#/components/schemas/DefaultRow'
-                - type: object
-                  required:
-                      - title
-                  properties:
-                      title:
-                          type: string
-                          required: true
-                      description:
-                          type: string
-
-        ApiTask:
-            allOf:
-                - $ref: '#/components/schemas/DefaultRow'
-                - type: object
-                  required:
-                      - title
-                      - done
-                  properties:
-                      title:
-                          type: string
-                      done:
-                          type: boolean
-
-        ApiTaskWithTaskListId:
-            allOf:
-                - $ref: '#/components/schemas/ApiTask'
-                - type: object
-                  properties:
-                      tasklist_id:
-                          type: number
-        Error:
-            type: object
+            description: Failed response result
             properties:
                 message:
                     type: string
                 code:
                     type: number
-                    enum: [400, 404, 500]
+                    enum: [400, 404, 500, 403]
+        ResponseWithMessage:
+            type: object
+            description: Success response result without data
+            properties:
+                message:
+                    type: string
+                code:
+                    type: number
+                    enum: [200, 201, 204]
+        ResponseWithData:
+            type: object
+            description: Success response result with data
+            properties:
+                data:
+                    oneOf:
+                        - type: object
+                        - type: array
+                code:
+                    type: number
+                    enum: [200, 201]
     parameters:
-        id:
-            name: id
-            description: Entity id
-            in: path
-            required: true
-            type: string
-        bodyId:
-            name: id
-            description: Entity id
+        credentials:
+            name: credentials
+            description: auth credentials
             in: body
-            required: true
-            type: number
-        title:
-            name: title
-            description: Entity title
-            in: body
-            required: true
-            type: string
-        description:
-            name: description
-            description: Entity description
-            in: body
-            required: false
-            type: string
-        done:
-            name: done
-            description: Task complete status
-            in: body
-            required: true
-            type: string
-    responses:
-        EntityId:
-            description: Created entity id
-            content: application/json
+            require: true
             schema:
                 type: object
                 properties:
-                    id:
-                        type: number
-        NotFound:
-            description: Entity not found
-            content: application/json
-            schema:
-                type: object
-                '$ref': '#/components/schemas/Error'
+                    username:
+                        type: string
+                    password:
+                        type: string
+    responses:
         BadRequest:
             description: Bad Request
             content: application/json
             schema:
                 type: object
-                '$ref': '#/components/schemas/Error'
+                '$ref': '#/components/schemas/ResponseWithError'
+        Unauthorized:
+            description: Unauthorized
+            content: application/json
+            schema:
+                type: object
+                '$ref': '#/components/schemas/ResponseWithError'
         OK:
             description: OK
-    securityDefinitions: {}
+            content: application/json
+            schema:
+                type: object
+                $ref: '#/components/schemas/ResponseWithMessage'
 tags:
-    - name: TaskList
-      description: Tasklist is collection of tasks
-    - name: Project
-      description: Project is collection of tasklists
-    - name: Task
-      description: Task - base unit
+    - name: Auth
+      description: Authorization and Authentication
